Ajout des tests et nettoyage SonarLint